<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/viewDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/tendangnhap"
        android:textColor="#000000"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/editTenDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hinttendangnhap"
        android:layout_margin="20dp"
        />

    <EditText
        android:id="@+id/editMatKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hintmatkhau"
        android:layout_margin="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btnDongY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dongy"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/btnThoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoat"
            android:layout_gravity="center"
            />
    </LinearLayout>

</LinearLayout>