<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleDangKy"
        android:gravity="center"
        android:textSize="20dp"

        />

    <EditText
        android:id="@+id/editTaiKhoanDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/taikhoandangky"
        android:layout_margin="10dp"

        >
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/editMatKhauDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hintmatkhau"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/editNhapLaiMatKhauDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hintnhapmatkhau"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btnDangKy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleDangKy"

            />

        <Button
            android:id="@+id/btnThoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoat" />
    </LinearLayout>
</LinearLayout>